k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: order-service
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: order-service
    spec:
      containers:
      - image: srikar2610/order-service:latest
        name: order-service
        ports:
        - containerPort: 8081
        resources: {}
status: {}
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: order-service
  name: order-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: order-service
status:
  loadBalancer: {}
apiVersion: v1
